--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -1,9 +1,10 @@
 .home__body {
-  width: 100%;
-  height: 100%;
   margin: 0;
-  position: relative;
   background-color: #2a2f3c;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 ul {
