--- a/src/login/Login.css
+++ b/src/login/Login.css
@@ -5,6 +5,10 @@
   margin: 0;
   padding: 100px;
   background-color: #2a2f3c;
+  position: absolute;
+  top: 45%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .login > img {
