--- a/src/home/HomePopUp.css
+++ b/src/home/HomePopUp.css
@@ -1,20 +1,18 @@
 .popup {
   position: fixed;
-  width: 100%;
+  width: 200%;
   height: 100%;
   top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-top: 50px;
   background-color: rgba(0, 0, 0, 0.5);
   text-align: center;
 }
 
 .popup_inner {
-  height: 85%;
-  width: 80%;
-  margin-top: 70px;
+  height: 100%;
+  width: 100%;
   margin-right: auto;
   margin-left: auto;
   margin-bottom: auto;
