--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -27,9 +27,10 @@
   display: flex;
   align-items: center;
   border-radius: 5px;
-  height: 22px;
+  height: 40px;
   color: gray;
   background-color: #eef3f8;
+  margin-right: 10px;
 }
 
 .header__search > input {
@@ -40,4 +41,13 @@
 
 .header__right {
   display: flex;
+}
+
+.header__right ul {
+  margin: 0 3rem 0 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex: 1 0 0%;
+  justify-content: space-between;
 }
