--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -1,10 +1,6 @@
 .home__body {
-  margin: 0;
+  width: 100%;
   background-color: #2a2f3c;
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 ul {
