--- a/src/home/HomePopUp.css
+++ b/src/home/HomePopUp.css
@@ -1,48 +1,22 @@
-.popup {
-  position: fixed;
-  width: 200%;
-  height: 100%;
-  top: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  margin-top: 50px;
-  background-color: rgba(0, 0, 0, 0.5);
-  text-align: center;
+.modal {
+  display: box;
+  box-sizing: border-box;
 }
 
-.popup_inner {
-  height: 100%;
-  width: 100%;
-  margin-right: auto;
-  margin-left: auto;
-  margin-bottom: auto;
-  background: white;
-  display: inline-block;
-}
-
-iframe {
-  height: 100%;
-  width: 100%;
-}
-
-.closeBtn {
-  margin-top: 1px;
-  background-color: #2a2f3c;
-  color: white;
-  border: 1px solid white;
-  padding: 2px 7px;
-  display: inline-block;
-  font-size: 20px;
+.modal > .close {
+  background-color: #fff;
+  border: 1px solid #cfcece;
+  border-radius: 18px;
   cursor: pointer;
-  -webkit-transition: ease-out 0.4s;
-  -moz-transition: ease-out 0.4s;
-  transition: ease-out 0.2s;
+  display: block;
+  font-size: 24px;
+  padding: 0px 5px;
+  position: absolute;
+  right: -10px;
+  top: -10px;
 }
 
-.closeBtn:hover {
-  box-shadow: inset 0 0 0 50px none;
-  color: white;
-  font-weight: bold;
-  border: 2px solid white;
-  border-radius: 15px;
+.modal iframe {
+  width: 80vw;
+  height: 90vh;
 }
