--- a/src/home/HomePopUp.css
+++ b/src/home/HomePopUp.css
@@ -1,22 +1,29 @@
 .modal {
-  display: box;
   box-sizing: border-box;
 }
 
 .modal > .close {
   background-color: #fff;
   border: 1px solid #cfcece;
-  border-radius: 18px;
+  border-radius: 20px;
   cursor: pointer;
   display: block;
   font-size: 24px;
-  padding: 0px 5px;
+  padding: 0px 7px;
   position: absolute;
   right: -10px;
   top: -10px;
+  z-index: 9999;
+}
+
+.modal > .close:hover {
+  opacity: 0.75;
+  border: 1px solid #fff;
+  transform: scale(1.1);
 }
 
 .modal iframe {
   width: 80vw;
   height: 90vh;
+  background-color: #fff;
 }
