--- a/src/userProfile/UserProfile.css
+++ b/src/userProfile/UserProfile.css
@@ -1,3 +1,9 @@
+.wrapper {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 section {
   position: relative;
   min-height: 100vh;
@@ -75,7 +81,4 @@ section .container .user .formBx input {
   margin: 8px 0;
   letter-spacing: 1px;
   font-weight: 300;
-}
-
-.PhoneInput {
 }
