--- a/src/userProfile/UserProfile.css
+++ b/src/userProfile/UserProfile.css
@@ -14,12 +14,17 @@ section {
   transition: 0.5s;
 }
 
+section.active {
+  background-color: #6b969d;
+}
+
 section .container {
   position: relative;
   width: 880px;
   height: 500px;
   background-color: #fff;
   box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
 }
 
 section .container .user {
@@ -67,14 +72,56 @@ section .container .user .displayBx div {
   border: none;
   box-shadow: none;
   font-size: 14px;
-  margin: 8px 0;
   letter-spacing: 1px;
   font-weight: 600;
 }
 
+section .container .user .displayBx button {
+  width: 100px;
+  height: 30px;
+  background: #677eff;
+  margin-top: 10px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  transition: 0.5s;
+  border: none;
+}
+
 section .container .user .displayBx div span {
+  display: inline-block;
   padding: 10px;
   font-weight: 500;
+}
+
+section .container .user .displayBx h2 {
+  font-size: 18px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  text-align: center;
+  width: 100%;
+  margin: 0;
+  color: #555;
+}
+
+section .container .infoBx .displayBx {
+  top: 0;
+}
+
+section .container.active .infoBx .displayBx {
+  top: 100%;
+}
+
+section .container .infoBx .imgBx {
+  top: 0;
+  transition: 0.5s;
+}
+
+section .container.active .infoBx .imgBx {
+  top: -100%;
 }
 
 section .container .user .formBx {
@@ -96,7 +143,7 @@ section .container .user .formBx h2 {
   letter-spacing: 2px;
   text-align: center;
   width: 100%;
-  margin-bottom: 10px;
+  margin-bottom: 25px;
   color: #555;
 }
 
@@ -111,4 +158,70 @@ section .container .user .formBx input {
   margin: 8px 0;
   letter-spacing: 1px;
   font-weight: 300;
+}
+
+section .container .user .formBx .btnBx {
+  width: 100%;
+  text-align: center;
+}
+
+section .container .user .formBx button {
+  width: 100px;
+  height: 30px;
+  background: #e73e49;
+  margin-top: 10px;
+  color: #fff;
+  cursor: pointer;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 1px;
+  transition: 0.5s;
+  border: none;
+}
+
+section .container .editBx {
+  pointer-events: none;
+}
+
+section .container.active .editBx {
+  pointer-events: initial;
+}
+
+section .container .editBx .formBx {
+  top: 100%;
+}
+
+section .container.active .editBx .formBx {
+  top: 0;
+}
+
+section .container .editBx .imgBx {
+  top: -100%;
+  transition: 0.5s;
+}
+
+section .container.active .editBx .imgBx {
+  top: 0;
+}
+
+@media (max-width: 991px) {
+  section .container {
+    width: 500px;
+  }
+
+  section .container .imgBx {
+    display: none;
+  }
+
+  section .container .user .displayBx {
+    width: 100%;
+  }
+
+  section .container .user .formBx {
+    width: 100%;
+  }
+
+  section .container.active .infoBx .displayBx {
+    top: -100%;
+  }
 }
