--- a/src/userProfile/UserProfile.css
+++ b/src/userProfile/UserProfile.css
@@ -8,8 +8,10 @@ section {
   position: relative;
   min-height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-content: center;
+  align-items: center;
   padding: 20px;
   transition: 0.5s;
 }
