--- a/src/header/HeaderOption.css
+++ b/src/header/HeaderOption.css
@@ -1,23 +1,25 @@
 .headerOption {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  margin-right: 20px;
-  color: gray;
+  color: #fff;
   cursor: pointer;
+  transition: all 0.5s ease;
+  border-radius: 12px;
+  white-space: nowrap;
 }
 
 .headerOption:hover {
-  color: black;
+  color: #11101d;
+  background: #fff;
 }
 
 .headerOption__title {
-  font-size: 12px;
+  font-size: 18px;
   font-weight: 400;
+  margin-left: 16px;
 }
 
 .headerOption__icon {
-  object-fit: contain;
-  height: 25px !important;
-  width: 25px !important;
+  height: 50px !important;
+  max-width: 50px !important;
 }
