--- a/src/portfolio/Portfolio.css
+++ b/src/portfolio/Portfolio.css
@@ -64,8 +64,8 @@ ul {
 
 .popIn > * {
   animation: 0.1s popIn;
-  animation-fill-mode: forwards;
   visibility: hidden;
+  animation-fill-mode: forwards;
 }
 
 .popIn *:nth-child(1) {
@@ -127,20 +127,17 @@ ul {
 }
 
 @keyframes fadeIn {
-  99% {
-    visibility: hidden;
+  from {
+    opacity: 0;
   }
-  100% {
-    visibility: visible;
+  to {
+    opacity: 1;
   }
 }
 
 .icon {
-  animation: 2.3s fadeIn;
+  animation: fadeIn 3s;
+  animation-delay: 2s;
   animation-fill-mode: forwards;
-  visibility: hidden;
-}
-
-.pageloaded {
-  animation: none;
+  opacity: 0;
 }
