--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -1,4 +1,4 @@
-.sidebar {
+.sidebar_menu {
   position: fixed;
   top: 0;
   left: 0;
@@ -10,11 +10,11 @@
   z-index: 1000;
 }
 
-.sidebar.active {
+.sidebar_menu.active {
   width: 240px;
 }
 
-.sidebar .logo_content .logo {
+.sidebar_menu .logo_content .logo {
   color: #fff;
   display: flex;
   height: 50px;
@@ -25,7 +25,7 @@
   transition: all 0.5s ease;
 }
 
-.sidebar.active .logo_content .logo {
+.sidebar_menu.active .logo_content .logo {
   opacity: 1;
   pointer-events: none;
 }
@@ -42,11 +42,11 @@
   opacity: 0;
 }
 
-.sidebar.active .logo_content .logo .logo_name {
+.sidebar_menu.active .logo_content .logo .logo_name {
   opacity: 1;
 }
 
-.sidebar .btn {
+.sidebar_menu .btn {
   position: absolute;
   color: #fff;
   left: 50%;
@@ -59,16 +59,16 @@
   transform: translateX(-50%);
 }
 
-.sidebar.active .btn {
+.sidebar_menu.active .btn {
   left: 90%;
 }
 
-.sidebar ul {
+.sidebar_menu ul {
   width: 75%;
   margin: 10px 10px;
 }
 
-.sidebar ul li {
+.sidebar_menu ul li {
   position: relative;
   height: 50px;
   width: 100%;
@@ -76,7 +76,7 @@
   list-style: none;
 }
 
-.sidebar ul li .tooltip {
+.sidebar_menu ul li .tooltip {
   position: absolute;
   left: 122px;
   top: 0;
@@ -94,17 +94,17 @@
   pointer-events: none;
 }
 
-.sidebar.active ul li .tooltip {
+.sidebar_menu.active ul li .tooltip {
   display: none;
 }
 
-.sidebar ul li:hover .tooltip {
+.sidebar_menu ul li:hover .tooltip {
   transition: all 0.5s ease;
   opacity: 1;
   top: 50%;
 }
 
-.sidebar ul li input {
+.sidebar_menu ul li input {
   position: absolute;
   height: 100%;
   width: 100%;
@@ -119,7 +119,7 @@
   background-color: #1d1b31;
 }
 
-.sidebar ul li .searchIcon {
+.sidebar_menu ul li .searchIcon {
   position: absolute;
   z-index: 99;
   color: #fff;
@@ -127,17 +127,17 @@
   transition: all 0.5s ease;
 }
 
-.sidebar ul li .searchIcon:hover {
+.sidebar_menu ul li .searchIcon:hover {
   background: #fff;
   color: #1d1b31;
   border-radius: 12px;
 }
 
-.sidebar ul li .nav {
+.sidebar_menu ul li .nav {
   text-decoration: none;
 }
 
-.sidebar .profile_content {
+.sidebar_menu .profile_content {
   position: absolute;
   color: #fff;
   bottom: 0;
@@ -145,7 +145,7 @@
   width: 100%;
 }
 
-.sidebar .profile_content .profile {
+.sidebar_menu .profile_content .profile {
   position: relative;
   padding-top: 10px;
   height: 100px;
@@ -153,7 +153,7 @@
   transition: all 0.5s ease;
 }
 
-.sidebar.active .profile_content .profile {
+.sidebar_menu.active .profile_content .profile {
   background: #1d1b31;
 }
 
@@ -166,7 +166,7 @@
   white-space: nowrap;
 }
 
-.sidebar.active .profile .profile_details {
+.sidebar_menu.active .profile .profile_details {
   opacity: 1;
   pointer-events: auto;
 }
