--- a/src/header/Header.css
+++ b/src/header/Header.css
@@ -22,7 +22,7 @@
   align-items: center;
   opacity: 0;
   pointer-events: none;
-  transition: all 0.5s ease;
+  transition: all 0.2s ease;
 }
 
 .sidebar_menu.active .logo_content .logo {
@@ -30,20 +30,14 @@
   pointer-events: none;
 }
 
+.sidebar_menu .logo_content .logo img {
+  height: 45px;
+  margin-left: 2px;
+}
+
 .logo_content .logo .codeIcon {
   font-size: 28px;
   margin-right: 5px;
-}
-
-.logo_content .logo .logo_name {
-  font-size: 20px;
-  font-weight: 400;
-  transition: all 1s ease;
-  opacity: 0;
-}
-
-.sidebar_menu.active .logo_content .logo .logo_name {
-  opacity: 1;
 }
 
 .sidebar_menu .btn {
@@ -65,7 +59,7 @@
 
 .sidebar_menu ul {
   width: 75%;
-  margin: 10px 10px;
+  margin: 10px 5px;
 }
 
 .sidebar_menu ul li {
@@ -84,10 +78,9 @@
   border-radius: 6px;
   height: 35px;
   width: 122px;
-  background: #fff;
+  background: none;
   line-height: 35px;
   text-align: center;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
   transition: 0s;
   opacity: 0;
   display: block;
@@ -107,7 +100,7 @@
 .sidebar_menu ul li input {
   position: absolute;
   height: 100%;
-  width: 100%;
+  width: 200px;
   left: 0;
   top: 0;
   padding-left: 40px;
@@ -117,11 +110,21 @@
   color: #fff;
   font-size: 18px;
   background-color: #1d1b31;
+  text-align: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s, opacity 0.2s linear 0.2s;
+}
+
+.sidebar_menu.active ul li input {
+  visibility: visible;
+  opacity: 1;
 }
 
 .sidebar_menu ul li .searchIcon {
   position: absolute;
   z-index: 99;
+  margin-left: 5px;
   color: #fff;
   font-size: 30px;
   transition: all 0.5s ease;
@@ -130,7 +133,7 @@
 .sidebar_menu ul li .searchIcon:hover {
   background: #fff;
   color: #1d1b31;
-  border-radius: 12px;
+  border-radius: 10px;
 }
 
 .sidebar_menu ul li .nav {
