--- a/src/header/HeaderOption.css
+++ b/src/header/HeaderOption.css
@@ -1,4 +1,5 @@
 .headerOption {
+  width: 200px;
   display: flex;
   align-items: center;
   color: #fff;
@@ -6,6 +7,7 @@
   transition: all 0.5s ease;
   border-radius: 12px;
   white-space: nowrap;
+  padding-left: 7px;
 }
 
 .headerOption:hover {
@@ -16,7 +18,7 @@
 .headerOption__title {
   font-size: 18px;
   font-weight: 400;
-  margin-left: 16px;
+  margin-left: 20px;
 }
 
 .headerOption__icon {
