--- a/src/portfolio/PortfolioPopup.css
+++ b/src/portfolio/PortfolioPopup.css
@@ -1,22 +1,24 @@
 .modal {
-  box-sizing: border-box;
+  background-color: #fff;
+  max-height: 95vh;
+  overflow-y: auto;
 }
 
-.modal > .close {
+.close {
   background-color: #fff;
-  border: 1px solid #cfcece;
+  border: 1px solid #806a6a;
   border-radius: 20px;
   cursor: pointer;
   display: block;
   font-size: 24px;
-  padding: 0px 7px;
+  padding: 0 7px;
   position: absolute;
-  right: -10px;
-  top: -10px;
+  right: -15px;
+  top: -15px;
   z-index: 9999;
 }
 
-.modal > .close:hover {
+.close:hover {
   opacity: 0.75;
   border: 1px solid #fff;
   transform: scale(1.1);
@@ -24,6 +26,10 @@
 
 .modal iframe {
   width: 80vw;
-  height: 90vh;
+  height: 100vh;
   background-color: #fff;
+}
+
+.modal.toggled {
+  margin-left: 240px;
 }
