--- a/src/portfolio/PortfolioPopup.css
+++ b/src/portfolio/PortfolioPopup.css
@@ -5,23 +5,60 @@
 }
 
 .close {
-  background-color: #fff;
-  border: 1px solid #806a6a;
-  border-radius: 20px;
+  background: none;
+  border: 0;
+  box-sizing: border-box;
+  color: transparent;
   cursor: pointer;
-  display: block;
-  font-size: 24px;
-  padding: 0 7px;
+  font-size: 8px;
+  left: 50%;
+  letter-spacing: 1.5px;
+  line-height: 35px;
+  outline: none;
+  overflow: hidden;
+  padding: 0;
   position: absolute;
-  right: -15px;
-  top: -15px;
+  left: 100%;
+  text-transform: uppercase;
+  transform: translate(-50%, -50%);
+  transition: all 0.2s ease-in;
+  height: 35px;
+  width: 35px;
   z-index: 9999;
 }
 
+.close::before,
+.close::after {
+  background-color: white;
+  content: "";
+  display: block;
+  height: 1px;
+  left: 0;
+  position: absolute;
+  transform-origin: center left;
+  transition: all 0.2s ease-in;
+  width: 141.4214px;
+  z-index: -1;
+}
+
+.close::before {
+  top: 0;
+  transform: rotate(45deg);
+}
+
+.close::after {
+  bottom: 0;
+  transform: rotate(-45deg);
+}
+
 .close:hover {
-  opacity: 0.75;
-  border: 1px solid #fff;
-  transform: scale(1.1);
+  color: #111b01;
+}
+
+.close:hover::before,
+.close:hover::after {
+  height: 50px;
+  transform: rotate(0deg);
 }
 
 .modal iframe {
