--- a/src/messaging/MessagingIndex.css
+++ b/src/messaging/MessagingIndex.css
@@ -1,14 +1,19 @@
-.messageIndex__body {
+.messageIndex__wrapper {
   position: absolute;
   height: 100%;
   width: calc(100% - 78px);
   left: 78px;
+  display: grid;
+  place-items: center;
+  transition: all 0.5s ease;
+}
+
+.messageIndex__body {
   display: flex;
   margin-top: 35px;
   max-width: 1200px;
   margin-left: 20px;
   margin-right: 20px;
-  transition: all 0.5s ease;
 }
 
 .toggled {
