--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -4,6 +4,7 @@
   width: calc(100% - 78px);
   left: 78px;
   transition: all 0.5s ease;
+  overflow: hidden;
 }
 
 .home_content .home {
@@ -11,6 +12,15 @@
   font-weight: 500;
   color: #fff;
   margin: 12px;
+  z-index: 999;
+}
+
+.home_content .home {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 .toggled {
