--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -1,26 +1,47 @@
-.home_content {
+.home_wrapper {
   position: absolute;
   height: 100%;
   width: calc(100% - 78px);
   left: 78px;
   transition: all 0.5s ease;
-  overflow: hidden;
 }
 
-.home_content .home {
-  font-size: 25px;
-  font-weight: 500;
-  color: #fff;
-  margin: 12px;
+.home_wrapper .home_content {
+  position: absolute;
+  top: 15%;
+  left: 5%;
+  width: 100%;
+  height: 100%;
   z-index: 999;
 }
 
-.home_content .home {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+.home_wrapper .home_content .home {
+  color: #fff;
+}
+
+.home .describe {
+  display: flex;
+  align-items: center;
+}
+
+.home .describe h2 {
+  color: #6b969d;
+  margin-left: 10px;
+  margin-top: 5px;
+}
+
+.home .describe span {
+  margin-top: 5px;
+  font-size: 25px;
+}
+
+.home .portfolio_btn {
+  text-align: center;
+}
+
+.home .portfolio_btn:hover {
+  transform: scaleY(1.1);
+  text-shadow: 5px 5px #6b969d;
 }
 
 .toggled {
