--- a/src/login/Login.css
+++ b/src/login/Login.css
@@ -72,3 +72,118 @@
 .closebtn:hover {
   color: black;
 }
+
+.guestLogin {
+  position: absolute;
+  top: 15%;
+  background-color: white;
+  width: 50vw;
+  height: 70vh;
+  padding-left: 15px;
+  padding-right: 15px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  z-index: 999;
+  opacity: 0.95;
+  word-break: keep-all;
+  font-family: monospace;
+  font-size: 20px;
+  border-radius: 20px;
+}
+
+.guestLogin .guestCloseBtn {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  margin-left: 15px;
+  color: gray;
+  font-weight: bold;
+  float: right;
+  font-size: 50px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.guestLogin .guestCloseBtn:hover {
+  color: black;
+}
+
+.guestLogin .guest_text {
+  margin-top: 30px;
+  width: 30vw;
+}
+
+.guestLogin .guest_text div {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.guestLogin .guest_info {
+  margin-top: 15px;
+  opacity: 0.5;
+}
+
+.guestLogin .button {
+  width: 200px;
+  height: 50px;
+  display: inline-block;
+  padding: 0.5em 1.2em;
+  margin: 1.5em 0.1em 0.5em 0;
+  border: 0.16em solid rgba(255, 255, 255, 0);
+  border-radius: 2em;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  color: #fff;
+  text-shadow: 0 0.04em 0.04em rgba(0, 0, 0, 0.35);
+  text-align: center;
+  background: #4e9af1;
+  transition: all 0.2s;
+  cursor: pointer;
+}
+
+.guestLogin .button:hover {
+  border-color: rgba(255, 255, 255, 1);
+}
+
+.bouncy {
+  animation: bouncy 5s infinite linear;
+  position: relative;
+}
+
+@keyframes bouncy {
+  0% {
+    top: 0em;
+  }
+  40% {
+    top: 0em;
+  }
+  43% {
+    top: -0.9em;
+  }
+  46% {
+    top: 0em;
+  }
+  48% {
+    top: -0.4em;
+  }
+  50% {
+    top: 0em;
+  }
+  100% {
+    top: 0em;
+  }
+}
+
+.guestLogin p {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.guestLogin .guestToUser {
+  color: #4e9af1;
+  cursor: pointer;
+}
